--- a/pages/metodos.html
+++ b/pages/metodos.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navegador">
             <div class="divlogonav">
-                <a href="../index.html"><img class="logonav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""></a>
+                    <a href="../index.html"><img class="logonav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""></a>
             </div>
             <i class="fa-sharp fa-solid fa-bars"></i>
             <ul>
@@ -27,7 +27,10 @@
         </nav>
         <h1 class="titulos">Métodos</h1>
     </header>
-    <main>
+    <main class="d-flex justify-content-center m-5"> 
+        <div>
+            <img src="../resources/img/work-progress-loading-bar-concept-hand-drawing-work-progress-loading-bar-concept-marker-transparent-wipe-board-167678984.jpg" alt="">
+        </div>
     </main>
     <footer class="footer">
         <ul>
