--- a/pages/tostado.html
+++ b/pages/tostado.html
@@ -28,31 +28,41 @@
         <h1 class="titulos">Tostado</h1>
     </header>
     <main>
-        <div class="divtostado row container-fluid p-2 align-items-center">
-            <div class="col-12 col-sm-6 col-lg-4">
-                <h2>Tostado Claro o Canela.</h2>
-                <p>Tiene acidez bastatne pronunciada, dejándonos una taza suave, clara, con notas florales y frutales</p>
+        <div class="divtostado row container-fluid p-2 align-items-end">
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
+                <div class="titulosTostado">
+                    <h2>Tostado Claro o Canela.</h2>
+                    <p>Tiene acidez bastatne pronunciada, dejándonos una taza suave, clara, con notas florales y frutales</p>
+                </div>
                 <img class="img-fluid" src="../resources/img/tostado/tostadoclaro.jpg" alt="">
             </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-                <h2>Tostado Medio.</h2>
-                <p>Mandiene buen balance entre aroma y acidez. Mayor dulzor, especial para catas de café por el equilibrio que nos brinda.</p>
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
+                <div class="titulosTostado">
+                    <h2>Tostado Medio.</h2>
+                    <p>Mandiene buen balance entre aroma y acidez. Mayor dulzor, especial para catas de café por el equilibrio que nos brinda.</p>
+                </div>
                 <img class="img-fluid" src="../resources/img/tostado/tostadomedio.jpg" alt="">
             </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-                <h2>Tostado Medio/Oscuro.</h2>
-                <h4>City o Full City Roas</h4>
-                <p>Nos brinda un perfil de sabores complejos, con menor acidez y presenta complejidad de aromas. Notas achocolatadas más pronunciadas con un cuerpo medio.</p>
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
+                <div class="titulosTostado">
+                    <h2>Tostado Medio/Oscuro.</h2>
+                    <h4>City o Full City Roas</h4>
+                    <p>Nos brinda un perfil de sabores complejos, con menor acidez y presenta complejidad de aromas. Notas achocolatadas más pronunciadas con un cuerpo medio.</p>
+                </div>
                 <img class="img-fluid" src="../resources/img/tostado/medioscuro.jpg" alt="">
             </div>
-            <div class="col-12 col-sm-6 col-lg-6">
-                <h2>Tostado Oscuro.</h2>
-                <p>Proporciona sabores amargos (retrogusto) y más achocolatados con una acidez casi nula. Cuerpo presente y completo. Se peuden perder las notas frutales y florales por el grado de tostado.</p>
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-6">
+                <div class="titulosTostado">
+                    <h2>Tostado Oscuro.</h2>
+                    <p>Proporciona sabores amargos (retrogusto) y más achocolatados con una acidez casi nula. Cuerpo presente y completo. Se peuden perder las notas frutales y florales por el grado de tostado.</p>
+                </div>
                 <img class="img-fluid" src="../resources/img/tostado/oscuro.jpg" alt="">
             </div>
-            <div class="col-12 col-sm-12 col-lg-6">
-                <h2>Tostado Torrefacto.</h2>
-                <p>No apropiado para cafés de alta calidad, el café torrefacto se tuesta a muy altas temperaturas, se le agrega azúcar o melaza y deja un sabor muy amargo. Se utiliza en café de muy baja calidad,  comunmente conocido como el café instantáneo.</p>
+            <div class="tarjetasTostado col-12 col-sm-12 col-lg-6">
+                <div class="titulosTostado">
+                    <h2>Tostado Torrefacto.</h2>
+                    <p>No apropiado para cafés de alta calidad, el café torrefacto se tuesta a muy altas temperaturas, se le agrega azúcar o melaza y deja un sabor muy amargo. Se utiliza en café de muy baja calidad,  comunmente conocido como el café instantáneo.</p>
+                </div>
                 <img class="img-fluid" src="../resources/img/tostado/torrefacto.jpg" alt="">
             </div>
         </div>
