Implementación de SASS + correcion de errores marcados en debolución de PreEntrega

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav class="navegador">
-            <div class="divlogonav">
-                <a href="./index.html"> <img class="logonav" src="./resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""> </a>
+            <div class="divLogoNav">
+                <a href="./index.html"> <img class="logoNav" src="./resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."> </a>
             </div>
             <i class="fa-sharp fa-solid fa-bars"></i>
             <ul>
@@ -27,7 +27,7 @@
         <h1 class="titulos">Primero Café</h1>
     </header>
     <main>
-        <div class="textoinicio">
+        <div class="textoInicio">
             <h3>Bienvenidx!</h3>
             <p>Esto es <span>primero café</span>, somos un grupo de jóvenes aficionados de este hermoso grano y todo lo relacionado a él.</p>
             <p>Creamos este sitio con el objetivo de brindar información sobre la bebida y la cantidad 
@@ -38,8 +38,8 @@
             <p>Esperemos que la información que brindamos sea de utilidad. El objetivo es dar un pantallazo general y 
                accesible sobre todos los principios y procesos del café. </p>
         
-        <div class="imagenindex"> 
-            <img src="./resources/img/f.elconfidencial.com_original_152_6b0_eff_1526b0eff12fad54065976f56c5b9e18.jpg" alt="">
+        <div class="imagenIndex"> 
+            <img src="./resources/img/f.elconfidencial.com_original_152_6b0_eff_1526b0eff12fad54065976f56c5b9e18.jpg" alt="Imagen que meustra una taza de café sobre granos tostados.">
         </div>
         </div>
     </main>
