--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav class="navegador">
-            <div class="divlogonav">
-                <a href="../index.html"><img class="logonav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""></a>
+            <div class="divLogoNav">
+                <a href="../index.html"><img class="logoNav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."></a>
             </div>
             <i class="fa-sharp fa-solid fa-bars"></i>
             <ul>
