--- a/pages/tostado.html
+++ b/pages/tostado.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav class="navegador">
-            <div class="divlogonav">
-                <a href="../index.html"><img class="logonav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""></a>
+            <div class="divLogoNav">
+                <a href="../index.html"><img class="logoNav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."></a>
             </div>
             <i class="fa-sharp fa-solid fa-bars"></i>
             <ul>
@@ -28,20 +28,20 @@
         <h1 class="titulos">Tostado</h1>
     </header>
     <main>
-        <div class="divtostado row container-fluid p-2 align-items-end">
+        <div class="divTostado row container-fluid p-2 align-items-end">
             <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
                 <div class="titulosTostado">
                     <h2>Tostado Claro o Canela.</h2>
                     <p>Tiene acidez bastatne pronunciada, dejándonos una taza suave, clara, con notas florales y frutales</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/tostadoclaro.jpg" alt="">
+                <img class="img-fluid" src="../resources/img/tostado/tostadoclaro.jpg" alt="Imágen: Tostado Claro o Canela.">
             </div>
             <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
                 <div class="titulosTostado">
                     <h2>Tostado Medio.</h2>
                     <p>Mandiene buen balance entre aroma y acidez. Mayor dulzor, especial para catas de café por el equilibrio que nos brinda.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/tostadomedio.jpg" alt="">
+                <img class="img-fluid" src="../resources/img/tostado/tostadomedio.jpg" alt="Imágen: Tostado Medio.">
             </div>
             <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
                 <div class="titulosTostado">
@@ -49,21 +49,21 @@
                     <h4>City o Full City Roas</h4>
                     <p>Nos brinda un perfil de sabores complejos, con menor acidez y presenta complejidad de aromas. Notas achocolatadas más pronunciadas con un cuerpo medio.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/medioscuro.jpg" alt="">
+                <img class="img-fluid" src="../resources/img/tostado/medioscuro.jpg" alt="Imágen: Tostado Medio/Oscuro.">
             </div>
             <div class="tarjetasTostado col-12 col-sm-6 col-lg-6">
                 <div class="titulosTostado">
                     <h2>Tostado Oscuro.</h2>
                     <p>Proporciona sabores amargos (retrogusto) y más achocolatados con una acidez casi nula. Cuerpo presente y completo. Se peuden perder las notas frutales y florales por el grado de tostado.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/oscuro.jpg" alt="">
+                <img class="img-fluid" src="../resources/img/tostado/oscuro.jpg" alt="Imágen: Tostado Oscuro.">
             </div>
             <div class="tarjetasTostado col-12 col-sm-12 col-lg-6">
                 <div class="titulosTostado">
                     <h2>Tostado Torrefacto.</h2>
                     <p>No apropiado para cafés de alta calidad, el café torrefacto se tuesta a muy altas temperaturas, se le agrega azúcar o melaza y deja un sabor muy amargo. Se utiliza en café de muy baja calidad,  comunmente conocido como el café instantáneo.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/torrefacto.jpg" alt="">
+                <img class="img-fluid" src="../resources/img/tostado/torrefacto.jpg" alt="Imágen: Tostado Torrefacto.">
             </div>
         </div>
     </main>
