--- a/pages/cultivo.html
+++ b/pages/cultivo.html
@@ -13,8 +13,8 @@
 <body >
     <header>
         <nav class="navegador">
-            <div class="divlogonav">
-                <a href="../index.html"><img class="logonav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""></a>
+            <div class="divLogoNav">
+                <a href="../index.html"><img class="logoNav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."></a>
             </div>
             <i class="fa-sharp fa-solid fa-bars"></i>
             <ul>
@@ -55,15 +55,15 @@
                 <div class="carousel-inner ">
                     <div class="carousel-item active">
                         <h6>Latinoamérica</h6>
-                        <img src="../resources/img/americalatina.png" class="d-block w-100 img-fluid" alt="...">
+                        <img src="../resources/img/americalatina.png" class="d-block w-100 img-fluid" alt="Mapa de Latinoamérica.">
                     </div>
                     <div class="carousel-item">
                         <h6>África - Arabia</h6>
-                        <img src="../resources/img/africa.png" class="d-block w-100 img-fluid" alt="...">
+                        <img src="../resources/img/africa.png" class="d-block w-100 img-fluid" alt="Mapa de África.">
                     </div>
                     <div class="carousel-item">
                         <h6>Asia - Pacífico</h6>
-                        <img src="../resources/img/asia.png" class="d-block w-100 img-fluid" alt="...">
+                        <img src="../resources/img/asia.png" class="d-block w-100 img-fluid" alt="Mapa de Asia.">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
