--- a/pages/metodos.html
+++ b/pages/metodos.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav class="navegador">
-            <div class="divlogonav">
-                    <a href="../index.html"><img class="logonav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt=""></a>
+            <div class="divLogoNav">
+                    <a href="../index.html"><img class="logoNav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."></a>
             </div>
             <i class="fa-sharp fa-solid fa-bars"></i>
             <ul>
@@ -29,7 +29,7 @@
     </header>
     <main class="d-flex justify-content-center m-5"> 
         <div>
-            <img src="../resources/img/work-progress-loading-bar-concept-hand-drawing-work-progress-loading-bar-concept-marker-transparent-wipe-board-167678984.jpg" alt="">
+            <img src="../resources/img/work-progress-loading-bar-concept-hand-drawing-work-progress-loading-bar-concept-marker-transparent-wipe-board-167678984.jpg" alt="Página en proceso.">
         </div>
     </main>
     <footer class="footer">
