--- a/pages/metodos.html
+++ b/pages/metodos.html
@@ -27,10 +27,42 @@
         </nav>
         <h1 class="titulos">Métodos</h1>
     </header>
-    <main class="d-flex justify-content-center m-5"> 
-        <div>
-            <img src="../resources/img/work-progress-loading-bar-concept-hand-drawing-work-progress-loading-bar-concept-marker-transparent-wipe-board-167678984.jpg" alt="Página en proceso.">
+    <main> 
+        <div class="d-flex row justify-content-center m-5">
+            <div class="tarjetasMetodos col-12 text-center">
+                <h2>¿Qué son los métodos?</h2>
+                <p>Existen diferentes métodos de extracción para preparar café. Pueden parecer utensilios complicados de usar y cuyo uso solo lo puede realizar un barista experimentado, pero no es así. Todos podemos usarlos. Lo importante es conocerlos y saber que características nos ofrecen.
+
+                    A continuación te contaremos de algunos métodos de extracción para que los conozcas y decidas cual usar la próxima vez que quieras preparar un rico café.</p>
+                <div class="imgMet1 img-fluid">
+                    <img src="../resources/img/cafemetodo.jpg" alt="Granos de Café">
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="tarjetasMetodos col-12 col-md-8 col-lg-3 text-center">
+                    <h3>Prensa Francesa.</h3>
+                    <p>La prensa francesa es uno de los métodos café más conocidos y se trata de un método de inmersión. Con él lograrás una taza de café de cuerpo medio, apariencia turbia y textura un poco terrosa, aunque lo puedes filtrar para que no quede tan terroso si así lo prefieres.</p>
+                    <div class="imgMet2 img-fluid">
+                        <img src="../resources/img/prensafrancesa.jpg" alt="Prensa Francesa">
+                    </div>
+                </div>
+                <div class="tarjetasMetodos col-12 col-md-8 col-lg-3 text-center">
+                    <h3>metodo2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui laboriosam reiciendis dicta. Error, cum velit ullam soluta quam distinctio a?</p>
+                    <div class="imgMet3">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="tarjetasMetodos col-12 col-md-8 col-lg-3 text-center">
+                    <h3>metodo3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit facere tenetur necessitatibus ea officia perferendis dolorem error aperiam dolor ut?</p>
+                    <div class="imgMet4">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
+
     </main>
     <footer class="footer">
         <ul>
