--- a/pages/tostado.html
+++ b/pages/tostado.html
@@ -39,7 +39,7 @@
             <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
                 <div class="titulosTostado">
                     <h2>Tostado Medio.</h2>
-                    <p>Mandiene buen balance entre aroma y acidez. Mayor dulzor, especial para catas de café por el equilibrio que nos brinda.</p>
+                    <p>Mantiene buen balance entre aroma y acidez. Mayor dulzor, especial para catas de café por el equilibrio que nos brinda.</p>
                 </div>
                 <img class="img-fluid" src="../resources/img/tostado/tostadomedio.jpg" alt="Imágen: Tostado Medio.">
             </div>
