--- a/pages/cultivo.html
+++ b/pages/cultivo.html
@@ -28,20 +28,20 @@
         <h1 class="titulos">Cultivo</h1>
     </header>
     <main class="container-fluid p-4"> 
-        <div class="row justify-content-center align-items-center" >
-            <div class="text-center col-12 col-md-6 ">
+        <div class="row justify-content-center align-items-center container-fluid" >
+            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
                 <h3>Ubicación</h3>
                 <p>Es la zona geográfica. Entre el trópico de cáncer y el trópico de capricornio.</p>
             </div>
-            <div class="text-center col-12 col-md-6 ">
+            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
                 <h3>Condiciones climatológicas</h3>
                 <p>El Clima ideal para el cultivo de café, es el tropical. Con temperaturas donde conviven ciclos húmedos y secos.</p>
             </div>
-            <div class="text-center col-12 col-md-6">
+            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
                 <h3>Suelo</h3>
                 <p>Los cafetos prefieren un suelo rico en minerales, húmedos y con una amplia variedad de vegetación que brinde buena sombra al mismo.</p>
             </div>
-            <div class="text-center col-12 col-md-6">
+            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
                 <h3>Altitud</h3>
                 <p>La altura que refiere el cafeto para dar fruto es de 800 a 2200 metros sobre el nivel del mar para granos de primera calidad.</p>
             </div>
