tarjetas metodos y SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Primero Café Principios Granos Tostado Comprar">
+    <meta name="description" content="Primero Café, tu sitio para aprender todos los principios sobre este maravilloso grano.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" >
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -29,13 +31,13 @@
     </header>
     <main>
         <div class="textoInicio">
-            <h3>Bienvenidx!</h3>
+            <h3>Café antes que nada.</h3>
             <p>Esto es <span>primero café</span>, somos un grupo de jóvenes aficionados de este hermoso grano y todo lo relacionado a él.</p>
             <p>Creamos este sitio con el objetivo de brindar información sobre la bebida y la cantidad 
-               de pasos por los que pasa el grano del café hasta llegar a ser lo que tomamos.</p>
+               de pasos por los que pasa el <b>grano del café</b> hasta llegar a ser lo que tomamos.</p>
             <p>A lo largo de este camino llegamos a generar sinergias con distribuidores en todo el país por lo que 
-               contamos con nuestra propia tienda virtual de granos. También dentro de nuestro equipo contamos 
-               con una tostadora artesanal, por lo que ofrecemos un producto único, resultado de este tueste.</p>
+               contamos con nuestra propia <b>tienda virtual</b> de granos. También dentro de nuestro equipo contamos 
+               con una <b>tostadora artesanal</b>, por lo que ofrecemos un producto único, resultado de este tueste.</p>
             <p>Esperemos que la información que brindamos sea de utilidad. El objetivo es dar un pantallazo general y 
                accesible sobre todos los principios y procesos del café. </p>
         
