--- a/pages/metodos.html
+++ b/pages/metodos.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Café Primero Filtrado Metodos B60 Italiana Prensa Francesa">
+    <meta name="description" content="Primero Café. Principales métodos de filtrado de Café.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" >
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Métodos</title>
+    <title>Métodos de Filtrado</title>
     <link rel="shortcut icon" href="../resources/favicon_io/android-chrome-192x192.png" type="image/x-icon">
 </head>
 <body>
@@ -25,13 +27,13 @@
                 <li><a href="../pages/tienda.html">Tienda</a></li>
             </ul>
         </nav>
-        <h1 class="titulos">Métodos</h1>
+        <h1 class="titulos">Métodos de Filtrado</h1>
     </header>
     <main> 
         <div class="d-flex row justify-content-center m-5">
-            <div class="tarjetasMetodos col-12 text-center">
+            <div class="metodosIntro col-12 text-center">
                 <h2>¿Qué son los métodos?</h2>
-                <p>Existen diferentes métodos de extracción para preparar café. Pueden parecer utensilios complicados de usar y cuyo uso solo lo puede realizar un barista experimentado, pero no es así. Todos podemos usarlos. Lo importante es conocerlos y saber que características nos ofrecen.
+                <p>Existen diferentes <b>métodos de extracción para preparar café</b>. Pueden parecer utensilios complicados de usar y cuyo uso solo lo puede realizar un barista experimentado, pero no es así. Todos podemos usarlos. Lo importante es conocerlos y saber que características nos ofrecen.
 
                     A continuación te contaremos de algunos métodos de extracción para que los conozcas y decidas cual usar la próxima vez que quieras preparar un rico café.</p>
                 <div class="imgMet1 img-fluid">
@@ -39,25 +41,33 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="tarjetasMetodos col-12 col-md-8 col-lg-3 text-center">
-                    <h3>Prensa Francesa.</h3>
-                    <p>La prensa francesa es uno de los métodos café más conocidos y se trata de un método de inmersión. Con él lograrás una taza de café de cuerpo medio, apariencia turbia y textura un poco terrosa, aunque lo puedes filtrar para que no quede tan terroso si así lo prefieres.</p>
-                    <div class="imgMet2 img-fluid">
-                        <img src="../resources/img/prensafrancesa.jpg" alt="Prensa Francesa">
+                <div class="tarjetasMetodos d-flex flex-column col-12 col-md-8 col-lg-3 text-center justify-content-evenly">
+                    <div>
+                        <h3>Prensa Francesa</h3>
+                        <p>La prensa francesa es uno de los métodos café más conocidos y se trata de un <b>método de inmersión</b>. Con él lograrás una taza de café de cuerpo medio, apariencia turbia y textura un poco terrosa, aunque lo puedes filtrar para que no quede tan terroso si así lo prefieres.</p>
+                    </div>
+                    <div class="imgMet2 img-fluid align-items-end">
+                        <img src="../resources/img/prensafrancesa.jpg" alt="Imágen de una Prensa Francesa.">
                     </div>
                 </div>
-                <div class="tarjetasMetodos col-12 col-md-8 col-lg-3 text-center">
-                    <h3>metodo2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui laboriosam reiciendis dicta. Error, cum velit ullam soluta quam distinctio a?</p>
+                <div class="tarjetasMetodos d-flex flex-column col-12 col-md-8 col-lg-3 text-center justify-content-evenly">
+                    <div>
+                        <h3>V60</h3>
+                        <p>Su nombre se debe a la forma cónica del recipiente, como V, y 60 por el ángulo al que se encuentra. Este es un <b>método de goteo</b>. 
+                            Cuenta con un solo orificio para facilitar una extracción uniforme. Con este método de extracción de café se obtiene una taza con cuerpo, aroma y acidez transformada en dulzor.</p>
+                    </div>
                     <div class="imgMet3">
-                        <img src="" alt="">
+                        <img src="../resources/img/v60.jpg" alt="Imágen de una V60.">
                     </div>
                 </div>
-                <div class="tarjetasMetodos col-12 col-md-8 col-lg-3 text-center">
-                    <h3>metodo3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit facere tenetur necessitatibus ea officia perferendis dolorem error aperiam dolor ut?</p>
-                    <div class="imgMet4">
-                        <img src="" alt="">
+                <div class="tarjetasMetodos d-flex flex-column col-12 col-md-8 col-lg-3 text-center justify-content-evenly align-self-center">
+                    <div>
+                        <h3>Cafetera Italiana</h3>
+                        <p>¿Qué metodo es la cafetera italiana?
+                            Las cafeteras italianas funcionan por <b>presión de vapor</b>. Es decir, que hace pasar el agua bajo presión, de una cámara baja hacia un contenedor ofiltro metálico con café molido. Allí se extrae el café y sale a la cámara superior hecho infusión de café espresso.</p>
+                    </div>
+                    <div class="imgMet4 img-fluid">
+                        <img src="../resources/img/cafeteraitaliana.jpg" alt="Imágen de una Cafetera Italiana.">
                     </div>
                 </div>
             </div>
