--- a/pages/tostado.html
+++ b/pages/tostado.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Tostado Café Granos Medio Oscuro Claro Torrefacto Primero Notas">
+    <meta name="description" content="Primero Café. Principios básicos y cualidades sobre cada tipo de tostado de Café.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" >
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Tostado</title>
+    <title>Tostado de Café</title>
     <link rel="shortcut icon" href="../resources/favicon_io/android-chrome-192x192.png" type="image/x-icon">
 </head>
 <body>
@@ -25,7 +27,7 @@
                 <li><a href="../pages/tienda.html">Tienda</a></li>
             </ul>
         </nav>
-        <h1 class="titulos">Tostado</h1>
+        <h1 class="titulos">Tostado de Café</h1>
     </header>
     <main>
         <div class="divTostado row container-fluid p-2 align-items-end">
