--- a/pages/cultivo.html
+++ b/pages/cultivo.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Café Primero Cultivo Granos Geografía Cafeto Altura Notas">
+    <meta name="description" content="Cultivo de Cafeto. Principios básicos del cultivo de Café.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" >
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Cultivo</title>
+    <title>Cultivo de Café</title>
     <link rel="shortcut icon" href="../resources/favicon_io/android-chrome-192x192.png" type="image/x-icon">
 </head>
 <body >
@@ -25,9 +27,12 @@
                     <li><a href="../pages/tienda.html">Tienda</a></li>
             </ul>
         </nav>
-        <h1 class="titulos">Cultivo</h1>
+        <h1 class="titulos">Cultivo de Café</h1>
     </header>
     <main class="container-fluid p-4"> 
+        <div>
+            <h2 class="fs-3 p-2 text-decoration-underline">Principios del <b>cultivo de Café</b>:</h2>
+        </div>
         <div class="row justify-content-center align-items-center container-fluid" >
             <div class="tarjetasCultivo text-center col-12 col-md-6 ">
                 <h3>Ubicación</h3>
