--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Primero Café Tienda Granos Tostado Artesanal Region Comprar Café">
+    <meta name="description" content="Primero Café. Nuestra tienda de granos con tostado artesanal.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" >
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Tienda</title>
+    <title>Tienda de Granos</title>
     <link rel="shortcut icon" href="../resources/favicon_io/android-chrome-192x192.png" type="image/x-icon">
 </head>
 <body>
@@ -29,7 +31,7 @@
     </header>
     <main>
         <form action="" method="get" class="formulario">
-                <h2>Pedí tus granos de Café</h2>
+                <h2>Pedí tus <b>granos de Café</b></h2>
                 <label> Nombre: 
                         <input type="text" name="nombre" placeholder="Ingrese su nombre" required>
                 </label>
