--- a/pages/metodos.html
+++ b/pages/metodos.html
@@ -37,7 +37,7 @@
 
                     A continuación te contaremos de algunos métodos de extracción para que los conozcas y decidas cual usar la próxima vez que quieras preparar un rico café.</p>
                 <div class="imgMet1 img-fluid">
-                    <img src="../resources/img/cafemetodo.jpg" alt="Granos de Café">
+                    <img src="../resources/img/metodos/cafemetodo.jpg" alt="Granos de Café">
                 </div>
             </div>
             <div class="row justify-content-around">
@@ -47,7 +47,7 @@
                         <p>La prensa francesa es uno de los métodos café más conocidos y se trata de un <b>método de inmersión</b>. Con él lograrás una taza de café de cuerpo medio, apariencia turbia y textura un poco terrosa, aunque lo puedes filtrar para que no quede tan terroso si así lo prefieres.</p>
                     </div>
                     <div class="imgMet2 img-fluid align-items-end">
-                        <img src="../resources/img/prensafrancesa.jpg" alt="Imágen de una Prensa Francesa.">
+                        <img src="../resources/img/metodos/prensafrancesa.jpg" alt="Imágen de una Prensa Francesa.">
                     </div>
                 </div>
                 <div class="tarjetasMetodos d-flex flex-column col-12 col-md-8 col-lg-3 text-center justify-content-evenly">
@@ -57,7 +57,7 @@
                             Cuenta con un solo orificio para facilitar una extracción uniforme. Con este método de extracción de café se obtiene una taza con cuerpo, aroma y acidez transformada en dulzor.</p>
                     </div>
                     <div class="imgMet3">
-                        <img src="../resources/img/v60.jpg" alt="Imágen de una V60.">
+                        <img src="../resources/img/metodos/v60.jpg" alt="Imágen de una V60.">
                     </div>
                 </div>
                 <div class="tarjetasMetodos d-flex flex-column col-12 col-md-8 col-lg-3 text-center justify-content-evenly align-self-center">
@@ -67,7 +67,7 @@
                             Las cafeteras italianas funcionan por <b>presión de vapor</b>. Es decir, que hace pasar el agua bajo presión, de una cámara baja hacia un contenedor ofiltro metálico con café molido. Allí se extrae el café y sale a la cámara superior hecho infusión de café espresso.</p>
                     </div>
                     <div class="imgMet4 img-fluid">
-                        <img src="../resources/img/cafeteraitaliana.jpg" alt="Imágen de una Cafetera Italiana.">
+                        <img src="../resources/img/metodos/cafeteraitaliana.jpg" alt="Imágen de una Cafetera Italiana.">
                     </div>
                 </div>
             </div>
