arreglos en cultivo y tostado

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -68,9 +68,9 @@
                 </Label>
                 <label> Variedad:
                     <select name="variedad" required>
-                            <option value="Brasil">Brasil</option>
-                            <option value="Colombia">Colombia</option>
-                            <option value="Kenya">Kenya</option>
+                            <option value="Brasil">Latinoamérica</option>
+                            <option value="Colombia">África - Arabia</option>
+                            <option value="Kenya">Asia - Pacífico</option>
                     </select>
                 </label>
                 <label class="acepto">Acepto términos y condiciones:
