--- a/pages/tostado.html
+++ b/pages/tostado.html
@@ -30,42 +30,60 @@
         <h1 class="titulos">Tostado de Café</h1>
     </header>
     <main>
-        <div class="divTostado row container-fluid p-2 align-items-end">
-            <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
+        <div class="tostadoIntro m-4 p-2">
+            <h2 class="p-2">El Proceso de Tostado/Tueste de Café.</h2>
+            <p class="p-2">El café tostado es resultado de un proceso a través del cual se transforma por completo el grano verde de café y se alteran sus características 
+                iniciales para producir otros componentes organolépticos, como el sabor, la acidez y el cuerpo del café que finalmente degustamos.</p>
+            <p class="p-2">La fase del tostado es fundamental. Según el tipo de tueste, el resultado es diferente y da un café con unas características u otras. 
+                De una misma materia prima se pueden obtener infusiones de café totalmente distintas según el tostado. La máquina tostadora, el calor aplicado, 
+                la temperatura y el tiempo de tostado son factores que influyen en el producto final.</p>
+        </div>
+        <div class="divTostado row container-fluid p-2 d-flex justify-content-around ">
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-3 d-flex flex-column justify-content-between">
                 <div class="titulosTostado">
-                    <h2>Tostado Claro o Canela.</h2>
+                    <h3>Tostado Claro o Canela.</h3>
                     <p>Tiene acidez bastatne pronunciada, dejándonos una taza suave, clara, con notas florales y frutales</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/tostadoclaro.jpg" alt="Imágen: Tostado Claro o Canela.">
+                <div class="imgTostado align-self-center">
+                    <img class="img-fluid" src="../resources/img/tostado/tostadoclaro.jpg" alt="Imágen: Tostado Claro o Canela.">
+                </div>
             </div>
-            <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-3 d-flex flex-column justify-content-between">
                 <div class="titulosTostado">
-                    <h2>Tostado Medio.</h2>
+                    <h3>Tostado Medio.</h3>
                     <p>Mantiene buen balance entre aroma y acidez. Mayor dulzor, especial para catas de café por el equilibrio que nos brinda.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/tostadomedio.jpg" alt="Imágen: Tostado Medio.">
+                <div class="imgTostado align-self-center">
+                    <img class="img-fluid" src="../resources/img/tostado/tostadomedio.jpg" alt="Imágen: Tostado Medio.">
+                </div>
             </div>
-            <div class="tarjetasTostado col-12 col-sm-6 col-lg-4">
-                <div class="titulosTostado">
-                    <h2>Tostado Medio/Oscuro.</h2>
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-3 d-flex flex-column justify-content-between">
+                <div class="titulosTostado align-self-center">
+                    <h3>Tostado Medio/Oscuro.</h3>
                     <h4>City o Full City Roas</h4>
                     <p>Nos brinda un perfil de sabores complejos, con menor acidez y presenta complejidad de aromas. Notas achocolatadas más pronunciadas con un cuerpo medio.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/medioscuro.jpg" alt="Imágen: Tostado Medio/Oscuro.">
+                <div class="imgTostado align-self-center">
+                    <img class="img-fluid" src="../resources/img/tostado/medioscuro.jpg" alt="Imágen: Tostado Medio/Oscuro.">
+                </div>
             </div>
-            <div class="tarjetasTostado col-12 col-sm-6 col-lg-6">
+            <div class="tarjetasTostado col-12 col-sm-6 col-lg-5 d-flex flex-column justify-content-between">
                 <div class="titulosTostado">
-                    <h2>Tostado Oscuro.</h2>
+                    <h3>Tostado Oscuro.</h3>
                     <p>Proporciona sabores amargos (retrogusto) y más achocolatados con una acidez casi nula. Cuerpo presente y completo. Se peuden perder las notas frutales y florales por el grado de tostado.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/oscuro.jpg" alt="Imágen: Tostado Oscuro.">
+                <div class="imgTostado align-self-center">
+                    <img class="img-fluid" src="../resources/img/tostado/oscuro.jpg" alt="Imágen: Tostado Oscuro.">
+                </div>
             </div>
-            <div class="tarjetasTostado col-12 col-sm-12 col-lg-6">
+            <div class="tarjetasTostado col-12 col-sm-12 col-lg-5 d-flex flex-column justify-content-between">
                 <div class="titulosTostado">
-                    <h2>Tostado Torrefacto.</h2>
+                    <h3>Tostado Torrefacto.</h3>
                     <p>No apropiado para cafés de alta calidad, el café torrefacto se tuesta a muy altas temperaturas, se le agrega azúcar o melaza y deja un sabor muy amargo. Se utiliza en café de muy baja calidad,  comunmente conocido como el café instantáneo.</p>
                 </div>
-                <img class="img-fluid" src="../resources/img/tostado/torrefacto.jpg" alt="Imágen: Tostado Torrefacto.">
+                <div class="imgTostado align-self-center">
+                    <img class="img-fluid" src="../resources/img/tostado/torrefacto.jpg" alt="Imágen: Tostado Torrefacto.">
+                </div>
             </div>
         </div>
     </main>
