--- a/pages/cultivo.html
+++ b/pages/cultivo.html
@@ -33,26 +33,48 @@
         <div>
             <h2 class="fs-3 p-2 text-decoration-underline">Principios del <b>cultivo de Café</b>:</h2>
         </div>
-        <div class="row justify-content-center align-items-center container-fluid" >
-            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
-                <h3>Ubicación</h3>
+        <div class="row justify-content-center align-items-center justify-content-evenly container-fluid" >
+            <div class="tarjetasCultivo text-center col-12 col-md-5 m-3 ">
+                <div class="d-flex justify-content-center">
+                    <h3>Ubicación</h3> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                        <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                    </svg>
+                </div>
                 <p>Es la zona geográfica. Entre el trópico de cáncer y el trópico de capricornio.</p>
             </div>
-            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
-                <h3>Condiciones climatológicas</h3>
+            <div class="tarjetasCultivo text-center col-12 col-md-5 m-3">
+                <div class="d-flex justify-content-center">
+                    <h3>Condiciones climatológicas</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-sun" viewBox="0 0 16 16">
+                        <path d="M7 8a3.5 3.5 0 0 1 3.5 3.555.5.5 0 0 0 .624.492A1.503 1.503 0 0 1 13 13.5a1.5 1.5 0 0 1-1.5 1.5H3a2 2 0 1 1 .1-3.998.5.5 0 0 0 .51-.375A3.502 3.502 0 0 1 7 8zm4.473 3a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z"/>
+                        <path d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
+                    </svg>
+                </div>
                 <p>El Clima ideal para el cultivo de café, es el tropical. Con temperaturas donde conviven ciclos húmedos y secos.</p>
             </div>
-            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
-                <h3>Suelo</h3>
+            <div class="tarjetasCultivo text-center col-12 col-md-5 m-3">
+                <div class="d-flex justify-content-center">
+                    <h3>Suelo</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tree" viewBox="0 0 16 16">
+                        <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5zM6.437 4.758A.5.5 0 0 0 6 4.5h-.066L8 1.401 10.066 4.5H10a.5.5 0 0 0-.424.765L11.598 8.5H11.5a.5.5 0 0 0-.447.724L12.69 12.5H3.309l1.638-3.276A.5.5 0 0 0 4.5 8.5h-.098l2.022-3.235a.5.5 0 0 0 .013-.507z"/>
+                    </svg>
+                </div>
                 <p>Los cafetos prefieren un suelo rico en minerales, húmedos y con una amplia variedad de vegetación que brinde buena sombra al mismo.</p>
             </div>
-            <div class="tarjetasCultivo text-center col-12 col-md-6 ">
-                <h3>Altitud</h3>
+            <div class="tarjetasCultivo text-center col-12 col-md-5 m-3">
+                <div class="d-flex justify-content-center">
+                    <h3>Altitud</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-square" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 9.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                    </svg>
+                </div>
                 <p>La altura que refiere el cafeto para dar fruto es de 800 a 2200 metros sobre el nivel del mar para granos de primera calidad.</p>
             </div>
         </div>   
         <div class="contenedorCarousel row justify-content-center align-items-center shadow">
-            <div class="text-center tituloCarousel col-12 col-sm-6">
+            <div class="text-center tituloCarousel col-12 col-sm-5">
                     <h3>Región</h3>
                     <p>Las regiones productoras de café más importantes</p>
             </div>
