tarjetas index y detalles

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navegador">
+        <nav class="navegador shadow">
             <div class="divLogoNav">
                 <a href="../index.html"><img class="logoNav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."></a>
             </div>
@@ -27,7 +27,7 @@
                 <li><a href="../pages/tienda.html">Tienda</a></li>
             </ul>
         </nav>
-        <h1 class="titulos">Tienda</h1>
+        <h1 class="titulos shadow">Tienda</h1>
     </header>
     <main>
         <form action="" method="get" class="formulario">
