--- a/pages/cultivo.html
+++ b/pages/cultivo.html
@@ -14,7 +14,7 @@
 </head>
 <body >
     <header>
-        <nav class="navegador">
+        <nav class="navegador shadow">
             <div class="divLogoNav">
                 <a href="../index.html"><img class="logoNav" src="../resources/img/icono-taza-cafe-vector-cafe-caliente-aislado-sobre-fondo-blanco-signo-simple-ilustracion-taza-cafe_7297-398.avif" alt="Imágen, logo del sitio."></a>
             </div>
@@ -27,7 +27,7 @@
                     <li><a href="../pages/tienda.html">Tienda</a></li>
             </ul>
         </nav>
-        <h1 class="titulos">Cultivo de Café</h1>
+        <h1 class="titulos shadow">Cultivo de Café</h1>
     </header>
     <main class="container-fluid p-4"> 
         <div>
